--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,22 +36,14 @@ jobs:
           path: bilbo-release.tar.gz
 
       - name: Deploy to VPS
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: bilbo-release.tar.gz
-          target: /home/debian/bilbo
-
-      - name: Extract and restart
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd /home/debian/bilbo
-            tar xzf bilbo-release.tar.gz
-            rm bilbo-release.tar.gz
-            systemctl --user restart bilbo
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_HOST: ${{ secrets.SSH_HOST }}
+          SSH_USER: ${{ secrets.SSH_USER }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-keyscan -H "$SSH_HOST" >> ~/.ssh/known_hosts
+          scp -i ~/.ssh/deploy_key bilbo-release.tar.gz "$SSH_USER@$SSH_HOST:/home/debian/bilbo/"
+          ssh -i ~/.ssh/deploy_key "$SSH_USER@$SSH_HOST" 'cd /home/debian/bilbo && tar xzf bilbo-release.tar.gz && rm bilbo-release.tar.gz && systemctl --user restart bilbo'
