--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
           name: soywod
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
+      - uses: Swatinem/rust-cache@v2
+
       - name: Build frontend
         run: nix develop --command cargo leptos build --release
 
