refactor: replace rust by ts

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL=postgres://bilbo:bilbo_dev@localhost:5432/bilbo
 QDRANT_URL=http://localhost:6334
 QDRANT_API_KEY=
 MISTRAL_API_KEY=
+PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+PUBLIC_SUPABASE_ANON_KEY=your-anon-key
