--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "sass": "^1.86.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "typescript-language-server": "^5.1.3",
-    "vercel": "^50.22.0"
+    "typescript-language-server": "^5.1.3"
   }
 }
